--- a/css/styles.css
+++ b/css/styles.css
@@ -11,14 +11,18 @@ body {
 }
 
 .font-footer {
-  font-size: 17px;
+  font-size: 16px;
   text-align: right;
 }
 
-@media (max width: 500px) {
+@media (max-width: 500px) {
   .font-footer {
+    padding: 6%;
     font-size: 16px;
     text-align: center;
+  }
+  .follow-text{
+    display: none;
   }
 }
 
@@ -38,6 +42,15 @@ body {
 .text-box {
   padding: 10%;
   box-sizing: padding-box;
+}
+
+@media (max-width: 500px) {
+  .text-box {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .image-text {
@@ -99,10 +112,11 @@ body {
   width: 100%;
   height: 500px;
   object-position: center center;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
-@media (max width: 600px) {
+@media (max-width: 500px) {
   .crop {
     width: 100%
     height: 400px;
