--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url(fonts.googleapis.com/css?family=Roboto);
+@import url(//fonts.googleapis.com/css?family=Roboto);
 body {
   font-family: "Roboto", sans-serif;
 }
