--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Roboto);
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .font-menu {
